# Sangam

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/dashboard/: ActiveNodes.tsx  ClusterOverview.tsx  MeshVisualization.tsx  ResourceGraphs.tsx  RuntimeConsole.tsx  TaskQueue.tsx
apps/desktop/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
apps/desktop/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Slider.tsx  Switch.tsx
apps/desktop/src/hooks/: use-polled.ts  use-runtime-data.ts
apps/desktop/src/lib/: cn.ts  format.ts  tauri.ts  types.ts
apps/desktop/src/pages/: Analytics.tsx  Cluster.tsx  Dashboard.tsx  Nodes.tsx  Runtime.tsx  Settings.tsx  Tasks.tsx
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs
crates/core/src/discovery/: mdns.rs  mod.rs
crates/core/src/logging/: bus.rs  mod.rs
crates/core/src/metrics/: collector.rs  mod.rs  sample.rs  store.rs
crates/core/src/models/: message.rs  mod.rs
crates/core/src/networking/: client.rs  mod.rs  server.rs
crates/core/src/peers/: mod.rs  registry.rs
crates/core/src/tasks/: executor.rs  mod.rs  result.rs  task.rs  tracker.rs
crates/core/src/utils/: banner.rs  mod.rs
crates/core/tests/: discovery.rs  networking.rs
src/: lib.rs  main.rs
src/discovery/: mdns.rs
src/models/: message.rs
src/networking/: client.rs  server.rs
src/tasks/: executor.rs  result.rs  task.rs
src/utils/: banner.rs  sysinfo.rs
tests/: discovery.rs  networking.rs
