[workspace]
resolver = "2"
members = [
    "crates/core",
    "apps/desktop/src-tauri",
]

# Default `cargo build` / `cargo test` only touches the core runtime so a
# fresh contributor doesn't need webkit2gtk + GTK installed just to hack
# on networking or discovery. Run `cargo build --workspace` (after
# installing the Tauri Linux prerequisites) to also build the GUI.
default-members = ["crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shiva-manu/Sangam"

[profile.release]
# Optimize for size + speed; keeps the desktop app's installer slim.
lto = true
codegen-units = 1
strip = "symbols"
