[workspace]
resolver = "2"
members = [
    "crates/core",
    "apps/desktop/src-tauri",
]

# Default `cargo build` / `cargo test` only touches the core runtime so a
# fresh contributor doesn't need webkit2gtk + GTK installed just to hack
# on networking or discovery. Run `cargo build --workspace` (after
# installing the Tauri Linux prerequisites) to also build the GUI.
default-members = ["crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shiva-manu/Sangam"

[profile.release]
# Optimize for size + speed; keeps the desktop app's installer slim.
lto = true
codegen-units = 1
strip = "symbols"

# Patch glib 0.18.x to fix RUSTSEC-2024-0429 (VariantStrIter unsoundness).
# Tauri 2.x depends on gtk-rs 0.18 which pins glib 0.18.x; the upstream fix
# only landed in glib 0.20+ (gtk4-rs). Remove this patch when Tauri upgrades.
# See: https://rustsec.org/advisories/RUSTSEC-2024-0429
[patch.crates-io]
glib = { git = "https://github.com/shiva-manu/gtk-rs-core.git", branch = "0.18-patched" }
glib-sys = { git = "https://github.com/shiva-manu/gtk-rs-core.git", branch = "0.18-patched" }
glib-macros = { git = "https://github.com/shiva-manu/gtk-rs-core.git", branch = "0.18-patched" }
gobject-sys = { git = "https://github.com/shiva-manu/gtk-rs-core.git", branch = "0.18-patched" }
gio-sys = { git = "https://github.com/shiva-manu/gtk-rs-core.git", branch = "0.18-patched" }
